// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizes empty configuration 1`] = `
Urc {
  "babelPlugins": Array [],
  "babelPresets": Array [],
  "devServerHistoryFallback": false,
  "htmlSource": "<PROJECT_ROOT>/lib/default-html.js",
  "jsEntry": "/fake-volume/src/entry.js",
  "mode": "development",
  "outputDirectory": "/fake-volume/_underreact-site",
  "polyfills": Object {
    "fetch": false,
    "objectAssign": false,
    "promise": false,
  },
  "port": 8080,
  "postcssPlugins": Array [],
  "production": false,
  "publicAssetsPath": "/underreact-assets",
  "publicDirectory": "/fake-volume/public",
  "rootDirectory": "/fake-volume",
  "siteBasePath": "",
  "stats": undefined,
  "stylesheets": Array [],
  "underreactRoot": "<PROJECT_ROOT>",
  "vendorModules": Array [],
  "webpackConfigTransform": [Function],
  "webpackLoaders": Array [],
  "webpackPlugins": Array [],
}
`;

exports[`normalizes fancy configuration 1`] = `
Urc {
  "babelPlugins": Array [
    "/babel-plugin-lodash",
  ],
  "babelPresets": Array [],
  "devServerHistoryFallback": false,
  "htmlSource": "<PROJECT_ROOT>/lib/config/src/index.html",
  "jsEntry": "/fake-volume/src/entry.js",
  "mode": "development",
  "outputDirectory": "/fake-volume/_underreact-site",
  "polyfills": Object {
    "fetch": true,
    "objectAssign": false,
    "promise": true,
  },
  "port": 8080,
  "postcssPlugins": Array [],
  "production": false,
  "publicAssetsPath": "/cacheable-things",
  "publicDirectory": "/fake-volume/public",
  "rootDirectory": "/fake-volume",
  "siteBasePath": "/fancy",
  "stats": undefined,
  "stylesheets": Array [
    "<PROJECT_ROOT>/lib/config/src/bg.css",
  ],
  "underreactRoot": "<PROJECT_ROOT>",
  "vendorModules": Array [],
  "webpackConfigTransform": [Function],
  "webpackLoaders": Array [
    Object {
      "test": /\\\\\\.less\\$/,
      "use": Array [
        "css-loader",
        "less-loader",
      ],
    },
  ],
  "webpackPlugins": Array [
    [Function],
  ],
}
`;
